--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-lg fixed-top text-light navbar-light" style="background-color: #222222;">
     <div class="container">
 
-        <img src="http://www.radiofreeskaro.com/wp-content/uploads/2011/06/BBC+Logo.jpg" width="100px" height="48px">
+        <img src="../public/images/BBCLogo.jpg" width="100px" height="48px">
 
 
         <h1 class="home">BBC Scraper</h1>
