--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-lg fixed-top text-light navbar-light" style="background-color: #222222;">
     <div class="container">
 
-        <img src="../public/images/BBCLogo.jpg" width="100px" height="48px">
+        <img src="https://premierleague-static-files.s3.amazonaws.com/premierleague/photo/2016/07/01/715b8dcc-c49a-4774-b52d-cc0d5d73b932/BBC-Sport.png" width="100px" height="56px">
 
 
         <h1 class="home">BBC Scraper</h1>
