--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -10,14 +10,40 @@
         integrity="sha256-BJeo0qm959uMBGb65z40ejJYGSgR7REI4+CW1fNKwOg=" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
         integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-        <link href="https://fonts.googleapis.com/css?family=Playfair+Display" rel="stylesheet">
-           <link rel="stylesheet" type="text/css" href="css/style.css">
-           <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Playfair+Display" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
 </head>
 
 <body>
+    <nav class="navbar navbar-expand-lg fixed-top text-light navbar-light" style="background-color: #222222;">
+        <div class="container">
 
+            <img src="https://premierleague-static-files.s3.amazonaws.com/premierleague/photo/2016/07/01/715b8dcc-c49a-4774-b52d-cc0d5d73b932/BBC-Sport.png"
+                width="225px" height="127px">
+
+
+            <h1 class="home">BBC Scraper</h1>
+
+            <ul class="nav navbar-nav navbar-right">
+                <li> <button id="home" type="button" class="btn home btn-info">Home</button></li>
+                &nbsp;&nbsp;
+                &nbsp; <li>
+                <li> <button id="scraper-button" type="button" class="btn btn-info">Scrape New Articles</button></li>
+                &nbsp;&nbsp;
+                &nbsp; <li> <button id="clear-button" type="button" class="btn view-saved btn-success">View Saved
+                        Articles</button></li>
+            </ul>
+        </div>
+    </nav>
     {{{body}}}
+    <footer class="page-footer fixed-bottom font-small text-light" style="background-color: #222222;">
+        <div class="container">
+            <div class="footer-copyright text-center py-3">© 2019 Copyright | <a href="https://github.com/jermainehunter/scraper" target="_blank">Jermaine Hunter - BBC Sport Github Repo</a> | UCSD Full Stack Development Bootcamp
+
+            </div>
+        </div>
+        </nav>
 </body>
 
 </html>
