fixed handlebars formatting issue

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -13,6 +13,7 @@
     <link href="https://fonts.googleapis.com/css?family=Playfair+Display" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
 </head>
 
 <body>
@@ -39,7 +40,7 @@
     {{{body}}}
     <footer class="page-footer fixed-bottom font-small text-light" style="background-color: #222222;">
         <div class="container">
-            <div class="footer-copyright text-center py-3">© 2019 Copyright | <a href="https://github.com/jermainehunter/scraper" target="_blank">Jermaine Hunter - BBC Sport Github Repo</a> | UCSD Full Stack Development Bootcamp
+            <div class="footer-copyright text-center py-3">© 2019 Copyright | <a href="https://github.com/jermainehunter/scraper" target="_blank"><i class="fab fa-github"></i> BBC Sport Github Repo</a>
 
             </div>
         </div>
